# internal/transport/http/server.go
@@ -61,6 +61,10 @@ func NewServer(lc fx.Lifecycle, cfg config.Config, handler *Handler, authService
 	api.POST("/version", handler.Version)
 	api.POST("/me", handler.Me)
 	api.POST("/files/uploads/initiate", handler.InitiateUpload)
+	api.POST("/files/uploads/multipart/initiate", handler.InitiateMultipartUpload)
+	api.POST("/files/uploads/multipart/authorize-part", handler.AuthorizeUploadPart)
+	api.POST("/files/uploads/multipart/complete", handler.CompleteMultipartUpload)
+	api.POST("/files/uploads/multipart/abort", handler.AbortMultipartUpload)
 	api.POST("/files/uploads/complete", handler.CompleteUpload)
 	api.POST("/files/scans/report", handler.ReportScanResult)
 	api.POST("/files/metadata/get", handler.GetFile)
